clusters/apps/env/production/auth-system/oauth2-proxy/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: google-auth
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
  labels:
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      services:
        - name: google-auth-oauth2-proxy
          port: 80
      middlewares:
        - name: oauth-headers
          namespace: auth-system
    - kind: Rule
      match: Host(`*.${FAMILY_DOMAIN}`) && PathPrefix(`/oauth2/`)
      services:
        - name: google-auth-oauth2-proxy
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
